dnl Process this file with autoconf to produce a configure script.
dnl
dnl	Copyright (C) 2001,2002 Free Software Foundation, Inc.
dnl
dnl  This file is part of GUILE-WWW
dnl
dnl  GUILE-WWW is free software; you can redistribute it and/or modify it
dnl  under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2, or (at your
dnl  option) any later version.
dnl
dnl  GUILE-WWW is distributed in the hope that it will be useful, but
dnl  WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl  General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with GUILE; see the file COPYING.  If not, write to the
dnl  Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl  Boston, MA 02111-1307, USA.

AC_INIT(http.scm)
AM_INIT_AUTOMAKE(guile-www, 1.1.1, no-define)
AC_OUTPUT(Makefile doc/Makefile)
