dnl Process this file with autoconf to produce a configure script.
dnl
dnl Copyright (C) 2001, 2002, 2003, 2004, 2005,
dnl    2006, 2007 Free Software Foundation, Inc.
dnl
dnl  This file is part of Guile-WWW
dnl
dnl  Guile-WWW is free software; you can redistribute it and/or modify it
dnl  under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 3, or (at your
dnl  option) any later version.
dnl
dnl  Guile-WWW is distributed in the hope that it will be useful, but
dnl  WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl  General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with Guile-WWW; see the file COPYING.  If not, write to the
dnl  Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor
dnl  Boston, MA  02110-1301  USA

AC_INIT([Guile-WWW],[2.20],[bug-guile@gnu.org])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AC_GUILE_WWW_CORE_AOK
AC_GUILE_WWW_MODULES_AOK
AC_GUILE_WWW_TWERP_PREP
AC_GUILE_WWW_INST_METH_AOK
AC_CONFIG_FILES([
  Makefile
  server-utils/Makefile
  data/Makefile
  doc/Makefile
  examples/Makefile
])
AC_CONFIG_FILES([build-aux/module-compile],[chmod +x build-aux/module-compile])
AC_CONFIG_FILES([examples/id.cgi],[chmod +x examples/id.cgi])
AC_CONFIG_FILES([examples/wily-guile],[chmod +x examples/wily-guile])
AC_OUTPUT

dnl  configure.in ends here
