## Makefile.am
##
## Copyright (C) 2007, 2009, 2010, 2011, 2012 Thien-Thi Nguyen
##
## This file is part of Guile-WWW.
##
## Guile-WWW is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 3, or
## (at your option) any later version.
##
## Guile-WWW is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Guile-WWW.  If not, see <http://www.gnu.org/licenses/>.

wwwdir = $(GUILE_LIBSITE)/www/server-utils
www_DATA = $(su_leaves)

include $(top_srcdir)/build-aux/comp.mk

## Makefile.am ends here
